2002-08-06  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/FS/flow-ortho.c: 
	* objects/FS/flow.c: Made the label behave again.
	Also removed GTK refs.

2002-08-05  Cyrille Chepelov  <cyrille@chepelov.org>

	* configure.in: added ro to ALL_LINGUAS

	* po-checktrans:
	* po-checktrans.py:
	* ../translation-graphs/transgraph.py: added support for fuzzy
	translations. Enlarged the graphs.

2002-08-05  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/disp_callbacks.c (ddisplay_canvas_events): Now translates
	key events according to locale.  No clue if this works for
	advanced stuff.

2002-08-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/text.c: Various UTF8 related fixes, in particular in
	deleting.  Text_insert_char is fine, far as I can tell.

	* app/interface.c (create_display_shell): 
	* app/commands.c: Now uses gtk_clipboard functions, for they are
	much simpler.  Also handles Win32 clipboard.  Non-ascii chars
	don't seem to get handled correctly by text_insert_char in
	lib/text.c.
	
	* app/commands.c (received_selection_handler): Got utf8 handling
	on paste, and individual char handling out of commands.c.  Pasting
	non-ASCII is still broken, somehow.  It's all lib/text.c's fault.

	* lib/message.c (gtk_message_internal): Message dialog re-shown
	when new message appears.  Maybe it should even move to top?

	* lib/font.c: 
	* lib/widgets.c: 
	* app/render_eps.c (create_eps_renderer): Fonts now lowercase
	(again) and case-insensitive.

	* objects/GRAFCET/condition.c (CONDITION_FONT): Changed to
	BASIC_SANS_FONT. 

2002-08-02  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/commands.c (edit_cut_text_callback): 
	* lib/text.c (text_delete_all): Now functioning undo for text cut.
	
	* app/commands.c (edit_cut_text_callback): Now removes text.
	Undo is broken, though.

2002-08-01  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diagram.c (diagram_update_menu_sensitivity): 
	Making cut_text active.
	
	* app/commands.h: 