@@ -26,7 +26,6 @@
 #endif
 
 #include <assert.h>
-#include <gtk/gtk.h>
 #include <math.h>
 
 #include "intl.h"
@@ -54,7 +53,6 @@ typedef enum {
 } AnchorShape;
 
 typedef struct _Diamond Diamond;
-typedef struct _DiamondDefaultsDialog DiamondDefaultsDialog;
 
 struct _Diamond {
   Element element;
@@ -73,27 +71,11 @@ struct _Diamond {
 };
 
 typedef struct _DiamondProperties {
-  Color *fg_color;
-  Color *bg_color;
   gboolean show_background;
-  real border_width;
 
   real padding;
-  Color *font_color;
 } DiamondProperties;
 
-struct _DiamondDefaultsDialog {
-  GtkWidget *vbox;
-
-  GtkToggleButton *show_background;
-
-  GtkSpinButton *padding;
-  DiaFontSelector *font;
-  GtkSpinButton *font_size;
-};
-
-
-static DiamondDefaultsDialog *diamond_defaults_dialog;
 static DiamondProperties default_properties;
 
 static real diamond_distance_from(Diamond *diamond, Point *point);
@@ -117,16 +99,14 @@ static void diamond_set_props(Diamond *diamond, GPtrArray *props);
 
 static void diamond_save(Diamond *diamond, ObjectNode obj_node, const char *filename);
 static Object *diamond_load(ObjectNode obj_node, int version, const char *filename);
-static GtkWidget *diamond_get_defaults(void);
-static void diamond_apply_defaults(void);
 
 static ObjectTypeOps diamond_type_ops =
 {
   (CreateFunc) diamond_create,
   (LoadFunc)   diamond_load,
   (SaveFunc)   diamond_save,
-  (GetDefaultsFunc)   diamond_get_defaults,
-  (ApplyDefaultsFunc) diamond_apply_defaults
+  (GetDefaultsFunc)   NULL,
+  (ApplyDefaultsFunc) NULL
 };
 
 ObjectType diamond_type =
@@ -215,17 +195,6 @@ diamond_set_props(Diamond *diamond, GPtrArray *props)
 }
 
 static void
-diamond_apply_defaults()
-{
-  default_properties.show_background = gtk_toggle_button_get_active(diamond_defaults_dialog->show_background);
-
-  default_properties.padding = gtk_spin_button_get_value_as_float(diamond_defaults_dialog->padding);
-  attributes_set_default_font(
-      dia_font_selector_get_font(diamond_defaults_dialog->font),
-      gtk_spin_button_get_value_as_float(diamond_defaults_dialog->font_size));
-}
-
-static void
 init_default_values() {
   static int defaults_initialized = 0;
 
@@ -234,98 +203,6 @@ init_default_values() {
     default_properties.padding = 0.5 * M_SQRT1_2;
     defaults_initialized = 1;
   }
-}
-
-static GtkWidget *
-diamond_get_defaults()
-{
-  GtkWidget *vbox;
-  GtkWidget *hbox;
-  GtkWidget *label;
-  GtkWidget *checkdiamond;
-  GtkWidget *padding;
-  GtkWidget *fontsel;
-  GtkWidget *font_size;
-  GtkAdjustment *adj;
-  DiaFont *font;
-  real font_height;
-
-  if (diamond_defaults_dialog == NULL) {
-  
-    init_default_values();
-
-    diamond_defaults_dialog = g_new(DiamondDefaultsDialog, 1);
-
-    vbox = gtk_vbox_new(FALSE, 5);
-    diamond_defaults_dialog->vbox = vbox;
-
-    gtk_object_ref(GTK_OBJECT(vbox));
-    gtk_object_sink(GTK_OBJECT(vbox));
-
-    hbox = gtk_hbox_new(FALSE, 5);
-    checkdiamond = gtk_check_button_new_with_label(_("Draw background"));
-    diamond_defaults_dialog->show_background = GTK_TOGGLE_BUTTON( checkdiamond );
-    gtk_widget_show(checkdiamond);
-    gtk_widget_show(hbox);
-    gtk_box_pack_start (GTK_BOX (hbox), checkdiamond, TRUE, TRUE, 0);
-    gtk_box_pack_start (GTK_BOX (vbox), hbox, TRUE, TRUE, 0);
-
-    hbox = gtk_hbox_new(FALSE, 5);
-    label = gtk_label_new(_("Text padding:"));
-    gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, TRUE, 0);
-    gtk_widget_show (label);
-    adj = (GtkAdjustment *) gtk_adjustment_new(0.1, 0.0, 10.0, 0.1, 1.0, 1.0);
-    padding = gtk_spin_button_new(adj, 1.0, 2);
-    gtk_spin_button_set_wrap(GTK_SPIN_BUTTON(padding), TRUE);
-    gtk_spin_button_set_numeric(GTK_SPIN_BUTTON(padding), TRUE);
-    diamond_defaults_dialog->padding = GTK_SPIN_BUTTON(padding);
-    gtk_box_pack_start(GTK_BOX (hbox), padding, TRUE, TRUE, 0);
-    gtk_widget_show (padding);
-    gtk_widget_show(hbox);
-    gtk_box_pack_start (GTK_BOX(vbox), hbox, TRUE, TRUE, 0);
-
-    hbox = gtk_hbox_new(FALSE, 5);
-    label = gtk_label_new(_("Font:"));
-    gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, TRUE, 0);
-    gtk_widget_show (label);
-    fontsel = dia_font_selector_new();
-    diamond_defaults_dialog->font = DIAFONTSELECTOR(fontsel);
-    gtk_box_pack_start (GTK_BOX (hbox), fontsel, TRUE, TRUE, 0);
-    gtk_widget_show (fontsel);
-    gtk_widget_show(hbox);
-    gtk_box_pack_start (GTK_BOX(vbox), hbox, TRUE, TRUE, 0);
-
-    hbox = gtk_hbox_new(FALSE, 5);
-    label = gtk_label_new(_("Font size:"));
-    gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, TRUE, 0);
-    gtk_widget_show (label);
-    adj = (GtkAdjustment *) gtk_adjustment_new(0.1, 0.1, 10.0, 0.1, 1.0, 1.0);
-    font_size = gtk_spin_button_new(adj, 1.0, 2);
-    gtk_spin_button_set_wrap(GTK_SPIN_BUTTON(font_size), TRUE);
-    gtk_spin_button_set_numeric(GTK_SPIN_BUTTON(font_size), TRUE);
-    diamond_defaults_dialog->font_size = GTK_SPIN_BUTTON(font_size);
-    gtk_box_pack_start(GTK_BOX (hbox), font_size, TRUE, TRUE, 0);
-    gtk_widget_show (font_size);
-    gtk_widget_show(hbox);
-    gtk_box_pack_start (GTK_BOX(vbox), hbox, TRUE, TRUE, 0);
-
-    gtk_widget_show (vbox);
-    gtk_widget_show (vbox);
-  }
-
-  gtk_toggle_button_set_active(diamond_defaults_dialog->show_background, 
-			       default_properties.show_background);
-
-  gtk_spin_button_set_value(diamond_defaults_dialog->padding,
-			    default_properties.padding);
-  font = NULL;
-  attributes_get_default_font(&font, &font_height);
-  dia_font_selector_set_font(diamond_defaults_dialog->font, font);
-  dia_font_unref(font);
-
-  gtk_spin_button_set_value(diamond_defaults_dialog->font_size, font_height);
-
-  return diamond_defaults_dialog->vbox;
 }
 
 static real
