@@ -1,8 +1,17 @@
 2002-08-06  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* objects/flowchart/parallelogram.c: 
+	* objects/flowchart/ellipse.c: 
+	* objects/flowchart/diamond.c: 
+	* objects/flowchart/box.c: 
+	Removed GTK defaults stuff.
+	
+	* objects/GRAFCET/transition.c: 
+	* objects/FS/function.c: Removed GTK include.
+
 	* objects/FS/flow-ortho.c: 
 	* objects/FS/flow.c: Made the label behave again.
-	Also removed GTK refs.
+	Also removed GTK defaults stuff.
 
 2002-08-05  Cyrille Chepelov  <cyrille@chepelov.org>
 
